# ChromeTaskbarMerger

./: .gitattributes  .gitignore  CMakeLists.txt  CODEX_TASK_Chrome_Taskbar_Merger_CPP.md  LICENSE  README.md  README.zh-CN.md  release-notes-v1.0.0.md  release-notes-v2.0.0.md
config/: ChromeTaskbarMerger.ini
docs/: CODEX_DEVELOPMENT_GUIDE.md  PORTABLE_README.md  README.md  V1_REQUIREMENTS.md  V2_PROFILE_NAME_PERSISTENCE.md  V2_REQUIREMENTS.md  V3_1_REQUIREMENTS.md  V3_BACKLOG.md  V3_REQUIREMENTS.md  V3_ROADMAP.md  V4_BACKLOG.md
scripts/: build-icon.ps1  build-portable.ps1  verify-login-startup.ps1
src/: app.manifest  app.rc.in  app_config.cpp  app_config.h  app_paths.cpp  app_paths.h  auto_start.cpp  auto_start.h  chrome_profile_resolver.cpp  chrome_profile_resolver.h  chrome_window.cpp  chrome_window.h  chrome_window_registry.cpp  chrome_window_registry.h  command_line.cpp  command_line.h  fixed_entry_app.cpp  fixed_entry_app.h  fixed_entry_manager.cpp  fixed_entry_manager.h  group_recovery_journal.cpp  group_recovery_journal.h  lifecycle_sync.cpp  lifecycle_sync.h  logger.cpp  logger.h  main.cpp  management_state.cpp  management_state.h  process_identity.cpp  process_identity.h  recovery_journal.cpp  recovery_journal.h  restore_command.cpp  restore_command.h  scan_schedule.cpp  scan_schedule.h  single_instance.cpp  single_instance.h  startup_wait.cpp  (+32 more)
tests/: CMakeLists.txt  auto_start_tests.cpp  chrome_profile_resolver_tests.cpp  chrome_window_registry_tests.cpp  command_line_tests.cpp  fixed_entry_manager_tests.cpp  group_recovery_tests.cpp  lifecycle_sync_tests.cpp  management_state_tests.cpp  manifest_tests.cpp  manual_test_plan.md  manual_test_plan_v2.md  manual_test_plan_v3_1.md  runtime_support_tests.cpp  scan_schedule_tests.cpp  tab_group_model_tests.cpp  tab_name_store_tests.cpp  tab_strip_layout_tests.cpp  window_group_integration_tests.cpp
